--- a/BoxJump/BoxJump/BoxJump.csproj
+++ b/BoxJump/BoxJump/BoxJump.csproj
@@ -46,43 +46,55 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="levelScreen.cs">
+    <Compile Include="HardLevel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="levelScreen.Designer.cs">
-      <DependentUpon>levelScreen.cs</DependentUpon>
+    <Compile Include="HardLevel.Designer.cs">
+      <DependentUpon>HardLevel.cs</DependentUpon>
     </Compile>
-    <Compile Include="gameScreen.cs">
+    <Compile Include="IntermediateLevel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="gameScreen.Designer.cs">
-      <DependentUpon>gameScreen.cs</DependentUpon>
+    <Compile Include="IntermediateLevel.Designer.cs">
+      <DependentUpon>IntermediateLevel.cs</DependentUpon>
     </Compile>
-    <Compile Include="helpScreen.cs">
+    <Compile Include="GameLevel.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="helpScreen.Designer.cs">
-      <DependentUpon>helpScreen.cs</DependentUpon>
-    </Compile>
-    <Compile Include="menuScreen.cs">
+    <Compile Include="LevelScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="menuScreen.Designer.cs">
-      <DependentUpon>menuScreen.cs</DependentUpon>
+    <Compile Include="LevelScreen.Designer.cs">
+      <DependentUpon>LevelScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EasyLevel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EasyLevel.Designer.cs">
+      <DependentUpon>EasyLevel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuScreen.Designer.cs">
+      <DependentUpon>MenuScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="levelScreen.resx">
-      <DependentUpon>levelScreen.cs</DependentUpon>
+    <EmbeddedResource Include="HardLevel.resx">
+      <DependentUpon>HardLevel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="gameScreen.resx">
-      <DependentUpon>gameScreen.cs</DependentUpon>
+    <EmbeddedResource Include="IntermediateLevel.resx">
+      <DependentUpon>IntermediateLevel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="helpScreen.resx">
-      <DependentUpon>helpScreen.cs</DependentUpon>
+    <EmbeddedResource Include="LevelScreen.resx">
+      <DependentUpon>LevelScreen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="menuScreen.resx">
-      <DependentUpon>menuScreen.cs</DependentUpon>
+    <EmbeddedResource Include="EasyLevel.resx">
+      <DependentUpon>EasyLevel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuScreen.resx">
+      <DependentUpon>MenuScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -160,6 +172,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\Platform Game Assets\Text\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\Update 1.9\Seasons Tiles %282.5D view%29\Autumn\128x128\Grass.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\Update 1.9\Seasons Tiles %282.5D view%29\Winter\128x128\Grass.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
